--- a/index.html
+++ b/index.html
@@ -1,37 +1,100 @@
+<!DOCTYPE html>
+<html>
 <head>
-    <title>IG-AE Supplementary Results</title>
+  <meta charset="utf-8">
+  <meta name="description"
+        content="">
+  <meta name="keywords" content="NeRF">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>IG-AE Supplementary</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+        rel="stylesheet">
+
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="./static/css/index.css">
+  <!-- <link rel="icon" href="./static/images/favicon.svg"> -->
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script type="text/javascript" id="MathJax-script" async
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 
 <body>
-    <h1>ICLR25 rebuttal of "Bringing NeRFs to the Latent Space: Inverse Graphics Autoencoder</h1>>
-    <h2>Supplementary results</h2>
 
-    <div margin="auto">
-        <video id="large-scale" autoplay muted loop playsinline width="70%">
-            <source src="./assets/front_cover.mp4"
+<!-- Front cover. -->
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column is-full-width">
+      <div class="content has-text-justified">
+        <div class="columns is-centered has-text-centered">
+          <video id="large-scale" autoplay muted loop playsinline width="65%">
+            <source src="./static/videos/front_cover.mp4"
                     type="video/mp4">
-        </video> 
-    </div>  
-
-    <div margin="auto">
-        <video id="large-scale" autoplay muted loop playsinline width="70%">
-            <source src="./assets/Vases.mp4"
-                    type="video/mp4">
-        </video> 
+          </video>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
+<!--/ Front cover. -->
 
-    <div margin="auto">
-        <video id="large-scale" autoplay muted loop playsinline width="70%">
-            <source src="./assets/Hats.mp4"
-                    type="video/mp4">
-        </video>  
-    </div>
+<!-- Results. -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Comparison with NeRFs trained in a standard latent space</h2>
+        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br>
 
-    <div margin="auto">
-        <video id="large-scale" autoplay muted loop playsinline width="70%">
-            <source src="./assets/Bags.mp4"
-                    type="video/mp4">
-        </video>  
+        <!-- Shapenet Vase -->
+        <h3 class="title is-4">Shapenet Vase</h3>
+        <div class="content has-text-justified">
+            <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="70%">
+                <source src="./static/videos/Vases.mp4"
+                        type="video/mp4">
+            </video>   
+            </div>
+        </div>
+        <br/>
+        <!--/ Shapenet Vase -->
+
+        <!-- Shapenet Hat -->
+        <h3 class="title is-4">Shapenet Hat</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="70%">
+              <source src="./static/videos/Hats.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Shapenet Hat -->
+
+        <!-- Shapenet Bag -->
+                <h3 class="title is-4">Shapenet Bag</h3>
+                <div class="content has-text-justified">
+                  <div class="columns is-centered has-text-centered">
+                    <video id="large-scale" autoplay muted loop playsinline width="70%">
+                      <source src="./static/videos/Bags.mp4"
+                              type="video/mp4">
+                    </video>   
+                  </div>
+                </div>
+                <br/>
+        <!--/ Shapenet Bag -->
+      </div>
     </div>
-    
+  </div>
+</section>
+<!--/ Results -->
+
 </body>
+</html>
