--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 
 <body>
 
+<section class="hero">
+    <div class="hero-body">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered">
+                <div class="column has-text-centered">
+                    <h1 class="title is-1 publication-title">Supplementary Results: ICLR25 Rebuttal <br> Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Front cover. -->
 <div class="container is-max-desktop">
   <div class="columns is-centered">
