--- a/index.html
+++ b/index.html
@@ -27,33 +27,38 @@
 
 <body>
 
+<!-- Title. -->
 <section class="hero">
     <div class="hero-body">
         <div class="container is-max-desktop">
             <div class="columns is-centered">
                 <div class="column has-text-centered">
-                    <h1 class="title is-1 publication-title">Supplementary Results: ICLR25 Rebuttal <br> Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
+                    <h1 class="title is-1 publication-title"><b>Supplementary Results: ICLR25 Rebuttal</b> <br> Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<!--/ Title. -->
 
 <!-- Front cover. -->
-<div class="container is-max-desktop">
-  <div class="columns is-centered">
-    <div class="column is-full-width">
-      <div class="content has-text-justified">
-        <div class="columns is-centered has-text-centered">
-          <video id="large-scale" autoplay muted loop playsinline width="65%">
-            <source src="./static/videos/front_cover.mp4"
-                    type="video/mp4">
-          </video>
+<section class="section">
+    <div class="container is-max-desktop">
+        <div class="columns is-centered">
+            <div class="column is-full-width">
+                <h2 class="title is-3">Latent NeRFs</h2>
+                <div class="content has-text-justified">
+                    <div class="columns is-centered has-text-centered">
+                        <video id="large-scale" autoplay muted loop playsinline width="70%">
+                            <source src="./static/videos/front_cover.mp4"
+                                    type="video/mp4">
+                        </video>   
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
+</section>
 <!--/ Front cover. -->
 
 <!-- Results. -->
