--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="container is-max-desktop">
             <div class="columns is-centered">
                 <div class="column has-text-centered">
-                    <h1 class="title is-1 publication-title"><b>Supplementary Results: ICLR25 Rebuttal</b> <br> Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
+                    <h1 class="title is-1 publication-title">Supplementary Results: ICLR25 Rebuttal<br></h1>
+                    <h1 class="title is-1">Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
                 </div>
             </div>
         </div>
