--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="columns is-centered">
                 <div class="column has-text-centered">
                     <h1 class="title is-1 publication-title">Supplementary Results: ICLR25 Rebuttal<br></h1>
-                    <h1 class="title is-1">Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</h1>
+                    <h1 class="title is-1 publication-title"><i>Bringing NeRFs to the Latent Space: <br> Inverse Graphics Autoencoder</i></h1>
                 </div>
             </div>
         </div>
@@ -48,6 +48,7 @@
         <div class="columns is-centered">
             <div class="column is-full-width">
                 <h2 class="title is-3">Latent NeRFs</h2>
+                Visualization of latent NeRF renderings in the latent space of our IG-AE and their corresponding decodings to the RGB space.
                 <div class="content has-text-justified">
                     <div class="columns is-centered has-text-centered">
                         <video id="large-scale" autoplay muted loop playsinline width="70%">
@@ -68,7 +69,7 @@
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Comparison with NeRFs trained in a standard latent space</h2>
-        This section compares NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br>
+        This section compares latent NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br>
 
         <!-- Shapenet Vase -->
         <h3 class="title is-4">Shapenet Vase</h3>
