--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <div class="columns is-centered">
             <div class="column is-full-width">
                 <h2 class="title is-3">Latent NeRFs</h2>
-                Visualization of latent NeRF renderings in the latent space of our IG-AE and their corresponding decodings to the RGB space.
+                Visualization of latent NeRF renderings in the latent space of our IG-AE and their corresponding decodings to the RGB space.<br><br>
                 <div class="content has-text-justified">
                     <div class="columns is-centered has-text-centered">
-                        <video id="large-scale" autoplay muted loop playsinline width="70%">
+                        <video id="large-scale" autoplay muted loop playsinline width="65%">
                             <source src="./static/videos/front_cover.mp4"
                                     type="video/mp4">
                         </video>   
