--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
 </section>
 <!--/ Front cover. -->
 
+<br><br>
 <!-- Results. -->
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Comparison with NeRFs trained in a standard latent space</h2>
-        This section compares latent NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br>
+        This section compares latent NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br><br>
 
         <!-- Shapenet Vase -->
         <h3 class="title is-4">Shapenet Vase</h3>
