updated videos with zoom

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Comparison with NeRFs trained in a standard latent space</h2>
-        This section compares latent NeRFs trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space, using our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br><br>
+        This section compares latent TensoRF trained in a standard latent space of an AE, and in our IG-AE 3D-aware latent space. This uses our latent NeRF training pipeline implemented as an extension to Nerfstudio.<br><br><br>
 
         <!-- Shapenet Vase -->
         <h3 class="title is-4">Shapenet Vase</h3>
@@ -97,19 +97,6 @@
         </div>
         <br/>
         <!--/ Shapenet Hat -->
-
-        <!-- Shapenet Bag -->
-                <h3 class="title is-4">Shapenet Bag</h3>
-                <div class="content has-text-justified">
-                  <div class="columns is-centered has-text-centered">
-                    <video id="large-scale" autoplay muted loop playsinline width="70%">
-                      <source src="./static/videos/Bags.mp4"
-                              type="video/mp4">
-                    </video>   
-                  </div>
-                </div>
-                <br/>
-        <!--/ Shapenet Bag -->
       </div>
     </div>
   </div>
