--- a/index.html
+++ b/index.html
@@ -57,6 +57,31 @@
                         </video>   
                     </div>
                 </div>
+                Below, we present supplementary scenes for the rebuttal, that will be present in the camera-ready version of our paper.
+                <div class="content has-text-justified">
+                  <div class="columns is-centered has-text-centered">
+                      <video id="large-scale" autoplay muted loop playsinline width="65%">
+                          <source src="./static/videos/supplementary_videos/vanilla/vanilla_all_scenes_1.mp4"
+                                  type="video/mp4">
+                      </video>   
+                  </div>
+              </div>
+              <div class="content has-text-justified">
+                <div class="columns is-centered has-text-centered">
+                    <video id="large-scale" autoplay muted loop playsinline width="65%">
+                        <source src="./static/videos/supplementary_videos/vanilla/vanilla_all_scenes_2.mp4"
+                                type="video/mp4">
+                    </video>   
+                </div>
+            </div>
+            <div class="content has-text-justified">
+              <div class="columns is-centered has-text-centered">
+                  <video id="large-scale" autoplay muted loop playsinline width="65%">
+                      <source src="./static/videos/supplementary_videos/vanilla/vanilla_all_scenes_3.mp4"
+                              type="video/mp4">
+                  </video>   
+              </div>
+          </div>
             </div>
         </div>
     </div>
@@ -102,6 +127,106 @@
   </div>
 </section>
 <!--/ Results -->
+
+
+<!-- Supplementary Results. -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Supplementary results on Objaverse</h2>
+        This section illustrates our supplementary results which will be present in the camera-ready version of our paper.<br><br><br>
+
+        <!-- Objaverse -->
+        <h3 class="title is-4">Objaverse Book</h3>
+        <div class="content has-text-justified">
+            <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
+                <source src="./static/videos/supplementary_videos/tensorf/Book.mp4"
+                        type="video/mp4">
+            </video>   
+            </div>
+        </div>
+        <br/>
+        <!--/ Objaverse -->
+
+        <!-- Objaverse -->
+        <h3 class="title is-4">Objaverse Burger</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
+              <source src="./static/videos/supplementary_videos/tensorf/Burger.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Objaverse -->
+
+        <!-- Objaverse -->
+        <h3 class="title is-4">Objaverse Flower</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
+              <source src="./static/videos/supplementary_videos/tensorf/Flower.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Objaverse -->
+
+        <!-- Objaverse -->
+        <h3 class="title is-4">Objaverse Painting</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
+              <source src="./static/videos/supplementary_videos/tensorf/Painting.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Objaverse -->
+
+        <!-- Objaverse -->
+        <h3 class="title is-4">Objaverse Robot </h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
+              <source src="./static/videos/supplementary_videos/tensorf/Robot.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Objaverse -->
+
+        <!-- Objaverse -->
+        <h3 class="title is-4">Objaverse Table</h3>
+        <div class="content has-text-justified">
+          <div class="columns is-centered has-text-centered">
+            <video id="large-scale" autoplay muted loop playsinline width="100%">
+              <source src="./static/videos/supplementary_videos/tensorf/Table.mp4"
+                      type="video/mp4">
+            </video>   
+          </div>
+        </div>
+        <br/>
+        <!--/ Objaverse -->
+      </div>
+    </div>
+  </div>
+</section>
+<!--/ Results -->
+
+
+
+
+
+
+
+
 
 </body>
 </html>
